fix: ensure the API matches current interface
